# chipcycle-env

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_api.py  test_local.py  todo.md
chipcycle.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: aes_drc.rpt  ariane_power.rpt  ibex_cts.rpt  picorv32a_sta.max.rpt  picorv32a_synthesis.stat.rpt
server/: __init__.py  app.py  environment.py  graders.py  tasks.py
