[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chipcycle"
version = "1.0.0"
description = "AI Chip Design Sign-off Review Environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "ChipCycle Team"},
]
keywords = ["openenv", "reinforcement-learning", "chip-design", "vlsi", "eda", "timing-analysis"]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "openapi-schema-pydantic>=1.2.4",
    "openai>=1.0.0",
    "openenv-core>=0.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
chipcycle-server = "server.app:main"

[tool.uv.extra-build-dependencies]
chipcycle = ["setuptools"]

[tool.setuptools.packages.find]
include = ["server*", "models*"]
